# pk

PK Farm/: AndroidManifest.xml  BUILD  MODULE.bazel  bazel-PK Farm  bazel-bin  bazel-out  bazel-testlogs  build-apk.sh
PK Farm/src/: AndroidManifest.xml  BUILD
PK Farm/src/java/com/example/pk farm/: MainActivity.kt
PK Farm/src/res/layout/: activity_main.xml
cpc/: settings.gradle.kts
cpc/app/: build.gradle.kts
cpc/app/src/main/kotlin/org/example/app/: App.kt
pkfarm/: app-release-signed.apk  app-release-signed.apk.idsig  app-signed.apk.idsig  build.gradle.kts  gradle.properties  pkfarm-release.keystore  settings.gradle.kts
pkfarm/apk/debug/: output-metadata.json
pkfarm/apk/release/: app-release-unsigned.apk  output-metadata.json
pkfarm/apk/release/baselineProfiles/0/: app-release-unsigned.dm
pkfarm/apk/release/baselineProfiles/1/: app-release-unsigned.dm
pkfarm/app/: build.gradle.kts  release-key.jks
pkfarm/app/src/main/: AndroidManifest.xml
pkfarm/app/src/main/java/com/example/pkfarm/: FertilizationWorker.kt  MainActivity.kt
pkfarm/app/src/main/java/com/example/pkfarm/ui/screens/: CalendarScreen.kt  HomeScreen.kt
pkfarm/app/src/main/java/com/example/pkfarm/ui/theme/: Theme.kt
pkfarm/app/src/main/java/com/example/pkfarm/workers/: ReminderWorker.kt
pkfarm/app/src/main/res/values/: strings.xml
