###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_android", version = "0.6.3")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "maven")
maven.install(
    name = "maven",
    artifacts = [
        "androidx.appcompat:appcompat:1.7.0",
        "androidx.core:core:1.8.0",
        "androidx.core:core-ktx:1.15.0",
        "androidx.drawerlayout:drawerlayout:1.1.1",
        "androidx.fragment:fragment:1.8.6",
        "androidx.lifecycle:lifecycle-common:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel:2.8.7",
    ],
    exclusions = {
        "androidx.appcompat:appcompat": "@maven//:androidx_appcompat_appcompat",
        "androidx.core:core": "@maven//:androidx_core_core",
        "androidx.core:core-ktx": "@maven//:androidx_core_core_ktx",
        "androidx.drawerlayout:drawerlayout": "@maven//:androidx_drawerlayout_drawerlayout",
        "androidx.fragment:fragment": "@maven//:androidx_fragment_fragment",
        "androidx.lifecycle:lifecycle-common": "@maven//:androidx_lifecycle_lifecycle_common",
        "androidx.lifecycle:lifecycle-viewmodel": "@maven//:androidx_lifecycle_lifecycle_viewmodel",
    },

    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
